v8/tests/messages/regression-1159021.out
regression-1159021.js:1: Uncaught SyntaxError: Invalid left-hand side expression in prefix operation
+++00
   ^^
